tests/NormalTests/paczka1/fuzzy1/97386120.err
Error in line 3: fjv2k2zqofH S36 97,8
Error in line 8: fjv2k2zqofH A956 29,7
Error in line 12: S36 S36 46,7
Error in line 14: FeX S36 47,7
Error in line 17: fjv2k2zqofH S43 39,8
Error in line 20: FeX S43 78,4
Error in line 13: Qcrd S43 21,7
Error in line 32: hya A956 20,0
Error in line 36: fjv2k2zqofH A956 67,7
